# nlp-annotation-framework

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
lexicon/arglex_Somasundaran07/__MACOSX/arglex_Somasundaran07/: ._inyourshoes.tff
notebooks/: playground.ipynb  tc_test.ipynb  test.ipynb
src/nlpaf/: __init__.py  config.py  data_processor.py  inferential _stats  inferential_stats.py  lexicons.py  text_miner.py  tm_with_spacy.py  topic_modeler.py  utils.py
src/nlpaf/annotator/: orchestrator.py  registered_pipes.py
src/nlpaf/annotator/instance/: dummy.py  emotion_annotator.py  emotion_orchestrator.py  empath_annotator.py  empath_orchestrator.py  hedge_orchestrator.py  mpqa_orchestrator.py  toxicity_orchestrator.py
src/nlpaf/annotator/pipe/linguistic/: emotion.py  empath.py  hedge.py  mpqa.py  toxicity.py
src/nlpaf/annotator/pipeline/: pipeline_base.py
src/nlpaf/ml/: ensemble.py  feature_based.py  preprocess.py  traditional_trainer.py
src/nlpaf/transformers/: text_classification.py
src/nlpaf/util/: helpers.py  timer.py
src/nlpat/: __init__.py  tm_with_spacy.py  topic_modeler.py
src/nlpat/annotator/: annotator.toml  registered_pipes.py
src/nlpat/annotator/instance/: hedge_orchestrator.py  ner_annotator.py
src/nlpat/annotator/pipe/linguistic/: mpqa.py
src/nlpat/annotator/pipeline/: pipeline_base.py
src/textmining_utility/: __init__.py  config.py  lexicons.py  text_miner.py  tm_with_spacy.py  topic_modeler.py  utility.py  utils.py
src/textmining_utility/annotator/: orchestrator.py  registered_pipes.py
src/textmining_utility/annotator/instance/: dummy.py  emotion_annotator.py  empath_annotator.py  hedge_orchestrator.py  ner_annotator.py  toxicity_orchestrator.py
src/textmining_utility/annotator/pipe/linguistic/: emotion.py  hedge.py  toxicity.py  typos.py
src/textmining_utility/annotator/pipeline/: pipeline_base.py
src/textmining_utility/corpus-analytics-logs/: logs.txt
