[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nlpaf"
version = "1.5.0"
description='Implementation of different NLP tools.'
readme = "README.md"
authors = [{ name = "Roxanne El Baff", email = "roxanne.elbaff@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',

]
keywords=['nlp', 'feature extraction', 'topic modeling']



dependencies = [
    "pandas",
    "spacy_arguing_lexicon",
    "numpy",
    "nltk",
    "gensim>=3.8.1",
    "spacy",
    "wordcloud",
    "matplotlib",
    "empath",
    "pyLDAvis",
    "scikit-learn",
    "torchvision",
    "pyarrow",
    "simpletransformers",
    "tqdm"
]

[project.urls]
Home = "https://github.com/roxanneelbaff/nlp-annotation-framework"

[tool.poetry]
# ...
include = ["lexicon"]

# to republish: flit build and the flit publish