[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nlpaf"
version = "2.10"
description='Implementation of different NLP tools.'
readme = "README.md"
authors = [{ name = "Roxanne El Baff", email = "roxanne.elbaff@gmail.com" }]
license = { file = "LICENSE" }
keywords=['nlp', 'feature extraction', 'topic modeling']
dependencies = [
    "pandas",
    "spacy_arguing_lexicon",
    "numpy",
    "nltk",
    "gensim>=3.8.1",
    "spacy",
    "wordcloud;python_version <'3.9'",
    "matplotlib",
    "empath",
    "pyLDAvis; python_version <'3.9'",
    "scikit-learn",
    "pyarrow",
    "simpletransformers; python_version <'3.9'",
    "tqdm",
    "statsmodels", 
    "scipy"
]


[tool.poetry]
# ...
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',

]
readme = "README.md"
include = ["lexicon"]

[project.urls]
repository = "https://github.com/roxanneelbaff/nlp-annotation-framework"


[tool.black]
line-length = 79

# to republish: flit build and the flit publish